--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" class="max-[540px]:text-[56.25%]">
 
 <head>
     <meta charset="UTF-8">
@@ -11,22 +11,24 @@
 
 <body class="bg-primary">
     <section class="hero-section">
-        <header class="flex flex-row items-center justify-between h-24 text-textPRIMARY px-16 py-6">
-            <h1 class="font-Bebas text-4xl">Ahmed Kamel</h1>
-            <div class="flex flex-row gap-4 items-center">
+        <header
+            class="flex flex-row items-center justify-between h-24 text-textPRIMARY px-16 py-6 max-lg:px-8 max-lg:py-4">
+            <h1 class="font-Bebas text-4xl max-sm:text-3xl">Ahmed Kamel</h1>
+            <div class="flex flex-row gap-4 items-center max-sm:gap-2">
                 <ul class="font-Manrope flex flex-row gap-4 items-center text-base">
                     <li><a class="hover:border-b-buttonColor hover:border-b-2" href="#">Work</a></li>
                     <li><a class="hover:border-b-buttonColor hover:border-b-2" href="#">About</a></li>
                     <li><a class="hover:border-b-buttonColor hover:border-b-2" href="#">Contact</a></li>
                 </ul>
                 <button
-                    class="bg-buttonColor text-primary font-Manrope text-sm uppercase font-medium cursor-pointer px-6 py-4 rounded-full hover:bg-buttonDarker hover:bg-secondaryHover transition duration-300 ease-in-out">
+                    class="bg-buttonColor text-primary font-Manrope text-sm uppercase font-medium cursor-pointer px-6 py-4 rounded-full hover:bg-buttonDarker hover:bg-secondaryHover transition duration-300 ease-in-out max-sm:px-4 max-sm:py-2">
                     Download CV
                 </button>
             </div>
         </header>
-        <main class="flex flex-row items-center start mx-auto p-32 gap-32 justify-between">
-            <div class="md:w-1/2 text-left space-y-4">
+        <main
+            class="flex flex-row items-center start mx-auto p-32 gap-32 justify-between max-md:p-16 max-md:flex-col max-md:gap-6">
+            <div class="md:w-1/2 text-left space-y-4 max-md:px-16 max-md:py-6 max-sm:px-4 max-sm:py-2">
                 <h1 class="font-Bebas text-white text-5xl font-bold">HI, I AM</h1>
                 <h2 class="font-Bebas text-white text-6xl font-bold">Ahmed Kamel</h2>
                 <p class=" font-Manrope text-textPRIMARY ">A dedicated Front-end Developer passionate about building
@@ -44,7 +46,7 @@
                     </a>
                 </div>
             </div>
-            <div class="md:w-1/2 mt-8 md:mt-0 flex justify-center">
+            <div class="md:w-1/2 mt-8 md:mt-0 flex justify-center max-sm:w-2/3">
                 <div class="bg-textPRIMARY p-4 rounded-lg shadow-lg">
                     <img src="/assets/images/personal_photo.jpg" alt="Ahmed Kamel" class="w-120 rounded-lg">
                 </div>
@@ -52,7 +54,7 @@
         </main>
     </section>
 
-    <section class="max-w-6xl mx-auto">
+    <section class="max-w-6xl mx-auto p-4 max-lg:px-16 max-lg:py-12 max-xl:px-9 max-xl:py-6">
         <div class="mb-12">
             <h2 class="text-4xl text-textPRIMARY font-bold uppercase">FEATURED PROJECTS</h2>
             <p class="text-textPRIMARY mt-2">Here are some of the selected projects that showcase my
@@ -61,11 +63,11 @@
         </div>
 
         <div class="space-y-12">
-            <div class="flex flex-col md:flex-row items-center bg-gray-900 p-6 rounded-lg">
-                <div class="md:w-1/2">
+            <div class="flex flex-col lg:flex-row items-center bg-gray-900 p-6 rounded-lg">
+                <div class="lg:w-1/2">
                     <img src="/assets/images/twitter_mimic.png" alt="Project Image" class="rounded-lg">
                 </div>
-                <div class="md:w-1/2 md:pl-8 mt-6 md:mt-0">
+                <div class="lg:w-1/2 lg:pl-8 mt-6 lg:mt-0">
                     <h3 class="text-2xl font-bold text-textPRIMARY">A Twitter Mimic projecr for our favorite show</h3>
                     <p class="text-gray-400 mt-2">
                         Teamed up with a designer to breathe life into a promotional webpage for our beloved show,
@@ -88,11 +90,11 @@
                 </div>
             </div>
 
-            <div class="flex flex-col md:flex-row items-center bg-gray-900 p-6 rounded-lg">
-                <div class="md:w-1/2">
+            <div class="flex flex-col lg:flex-row items-center bg-gray-900 p-6 rounded-lg">
+                <div class="lg:w-1/2">
                     <img src="/assets/images/youtube_mimic.png" alt="Project Image" class="rounded-lg">
                 </div>
-                <div class="md:w-1/2 md:pl-8 mt-6 md:mt-0">
+                <div class="lg:w-1/2 lg:pl-8 mt-6 lg:mt-0">
                     <h3 class="text-2xl font-bold text-textPRIMARY">Youtube Mimic Landscape Project</h3>
                     <p class="text-gray-400 mt-2">
                         Mastered CSS Grid complexities in building an innovative news homepage, enhancing front-end
@@ -114,11 +116,11 @@
                 </div>
             </div>
 
-            <div class="flex flex-col md:flex-row items-center bg-gray-900 p-6 rounded-lg">
-                <div class="md:w-1/2">
+            <div class="flex flex-col lg:flex-row items-center bg-gray-900 p-6 rounded-lg">
+                <div class="lg:w-1/2">
                     <img src="/assets/images/omnifood_project.png" alt="Project Image" class="rounded-lg">
                 </div>
-                <div class="md:w-1/2 md:pl-8 mt-6 md:mt-0">
+                <div class="lg:w-1/2 lg:pl-8 mt-6 lg:mt-0">
                     <h3 class="text-2xl font-bold text-textPRIMARY">E-commerce product page</h3>
                     <p class="text-gray-400 mt-2">
                         Successfully crafted an engaging product page featuring a dynamic lightbox gallery and seamless
@@ -145,8 +147,9 @@
 
     <hr class="border-gray-700 my-12">
 
-    <section class="max-w-5xl mx-auto flex flex-col gap-7 md:flex-row justify-between items-start p-8">
-        <div class="md:w-1/3">
+    <section
+        class="max-w-5xl mx-auto flex flex-col gap-7 md:flex-row justify-between items-start p-8 max-lg:px-16 max-lg:py-12 max-xl:px-9 max-xl:py-6">
+        <div class="md:w-1/3 max-md:w-full">
             <h2 class="text-4xl font-bold uppercase text-textPRIMARY">LET’S CONNECT</h2>
             <p class="mt-4 text-gray-400">Say hello at
                 <a href="mailto:ahmedkamel180998@gmail.com"
@@ -171,7 +174,7 @@
             </div>
         </div>
 
-        <div class="md:w-2/3">
+        <div class="md:w-2/3 max-md:w-full">
             <form class="space-y-4">
                 <div>
                     <label class="block text-sm font-semibold text-textPRIMARY">Name</label>
@@ -191,7 +194,7 @@
                     <textarea class="w-full p-3 bg-gray-900 text-white rounded-lg h-32"></textarea>
                 </div>
                 <button type="submit"
-                    class="bg-buttonColor text-black font-bold py-2 px-6 rounded-full hover:bg-buttonDarker">
+                    class="bg-buttonColor text-black font-bold py-2 px-6 rounded-full hover:bg-buttonDarker max-md:w-1/4">
                     SUBMIT
                 </button>
             </form>
